--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - RAILS_ENV=test bundle exec rake db:setup --trace
   - bundle exec rspec spec
+  - bundle exec cucumber
 before_script:
   - psql -c 'create database money_test' -U postgres
