--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake db:setup --trace
-  - bundle exec rspec spec
-  - bundle exec cucumber
+  - "RAILS_ENV=test bundle exec rake db:setup --trace"
+  - "bundle exec rspec spec"
+  - "bundle exec cucumber"
+  - "bundle exec rake spec:javascript"
 before_script:
-  - psql -c 'create database money_test' -U postgres
+  - "psql -c 'create database money_test' -U postgres"
