add register_spec, fixtures for transactions

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -39,6 +39,7 @@ spec_dir: spec/javascripts
 # relative path from spec_dir
 helpers:
   - "helpers/**/*.{js.coffee,js,coffee}"
+  - "fixtures/**/*.{js.coffee,js,coffee}"
 
 # list of file expressions to include as specs into spec runner
 # relative path from spec_dir
